--- a/package.json
+++ b/package.json
@@ -5,21 +5,36 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "jest"
+    "dev": "nodemon app.js",
+    "test": "jest",
+    "test:cov": "jest --coverage",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
-  "keywords": ["koa", "todo", "api", "rest"],
+  "keywords": [
+    "koa",
+    "todo",
+    "api",
+    "rest"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "koa": "^2.14.0",
-    "koa-router": "^12.0.0",
     "koa-bodyparser": "^4.4.0",
+    "koa-router": "^12.0.0",
+    "koa-static": "^5.0.0",
+    "koa2-swagger-ui": "^5.12.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-koa": "^0.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "eslint": "^9.39.1",
+    "fast-check": "^3.0.0",
     "jest": "^29.0.0",
-    "supertest": "^6.3.0",
-    "fast-check": "^3.0.0"
+    "nodemon": "^3.1.11",
+    "supertest": "^6.3.0"
   },
   "jest": {
     "testEnvironment": "node",
